--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -7,6 +7,10 @@
 }
 
 /* shared style */
+.second-bg{
+    background-color: #FFF8F3;
+}
+
 .text-primary{
     color: #FD6E0A;
 }
@@ -25,6 +29,12 @@
     border-radius: 5px;
     border: none;
 }
+.common-text-syntax{
+   background-size: 35px;
+   font-weight: bold;
+   color: #181818; 
+}
+
 /* header style */
 .header{
     background-image: url('../images/developer.png'), url('../images/header_bg.png');
@@ -79,4 +89,32 @@ nav ul li a{
 
 .banner-image-pic{ 
     width: 580px;
+}
+/* main style */
+.main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+/* About styles */
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin: 130px;
+}
+/* .about-container{
+    background-color: #FFFFFF;
+
+} */
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+.item-description{
+    font-weight: 600;
+}
+.item-title{
+    color: #757575;
+    /* font-size: 20px; */
 }
