--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -29,12 +29,18 @@
     border-radius: 5px;
     border: none;
 }
-.common-text-syntax{
+.section-title{
    background-size: 35px;
    font-weight: bold;
    color: #181818; 
 }
-
+.section-description{
+    color: #757575;
+    font-size: 18px;
+}
+.text-center{
+    text-align: center;
+}
 /* header style */
 .header{
     background-image: url('../images/developer.png'), url('../images/header_bg.png');
@@ -91,9 +97,13 @@ nav ul li a{
     width: 580px;
 }
 /* main style */
-.main{
+main{
     max-width: 1140px;
     margin: 0 auto;
+}
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
 }
 
 /* About styles */
@@ -101,7 +111,7 @@ nav ul li a{
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin: 130px;
+    /* margin: 130px; */
 }
 /* .about-container{
     background-color: #FFFFFF;
@@ -117,4 +127,25 @@ nav ul li a{
 .item-title{
     color: #757575;
     /* font-size: 20px; */
+}
+
+/* skill styles */
+.skill-title{
+    font-size: 20px;
+    font-weight: bold;
+    color: #181818;
+}
+.skill-description{
+    font-size: 16px;
+    color: #757575;
+}
+
+.skill-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    border-radius: 5px;
+    padding: 30px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.25);
 }
