--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -184,9 +184,38 @@ main section{
 .resume hr{
     margin: 30px 0px 30px 0px;
     color: #D1D1D1;
-    
 }
 .button-container{
     margin-top: 50px;
 
 }
+/* footer styles */
+.footer{
+    /* max-width: 100%; */
+    display: flex;
+    gap: 100px;
+    padding: 130px 230px;
+}
+.footer-column{
+    width: 50%;
+}
+
+.footer-description{
+    color: #474747;
+    font-size: 16px;
+    font-weight: 500;
+}
+.footer input[type="text"], .footer input[type="email"], .footer textarea {
+    height: 64px;
+    border-radius: 5px;
+    display: block;
+    width: 100%;
+    /* margin-top: 28px; */
+    margin-bottom: 24px;
+    padding: 10px 20px;
+    background-color: white;
+    border: none;
+}
+/* .form-container{
+    display: block;
+} */
